# VEnvIt

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  Manifest.psd1  README.md  ReleaseNotes.md  ToDo.md  coverage.xml  pyproject.toml
.github/workflows/: 01-pre-commit-and-document-check.yaml  03-ci.yaml  04-build-and-deploy-to-production.yaml
ai_prompts/: Issue-Feature.md  Issue-Main-Feature.md  Project-Create-a-new-Project.md  Release-Update-General.md
src/: Conclude-UpgradePrep.psm1  Install-Conclude.psm1  Uninstall.ps1  Utils.psm1  install.ps1  secrets.ps1  vi.ps1  vn.ps1  vr.ps1  vs.ps1
src/venvit/: __main__.py  main.py  models.py  setup.py  upgrade.py
src/venvit/core/: env_setup.py
src/venvit/upgrade/: upgrade.py
tests/: Conclude-UpgradePrep.Tests.ps1  Install-Conclude.Tests.ps1  Install.Tests.ps1  Publish-TestResources.Tests.ps1  Publish-TestResources.psm1  Uninstall.Tests.ps1  Utils.Tests.ps1  conftest.py  test_core.py  test_main.py  test_setup.py  test_upgrade.py  vi.Tests.ps1  vn.Tests.ps1  vr.Tests.ps1
tests/testdata/: test_data.py
