[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = 'venvit'
version = '7.3.0'
description = 'Tools for creating, maintaining and automating Python virtual environments.'
authors = [
    { name = "Hendrik du Toit", email = "hendrik@brightedge.co.za" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
]
dependencies = [
    "gitpython (>=3.1.44,<4.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "beetools (>=5.2.5,<6.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
]
license = "MIT"
license-files = ["LICENSE.txt"]
maintainers = [
    { name = "Hendrik du Toit", email = "hendrikdt@citiqprepaid.co.za" },
    { name = 'Henru du Toit', email = 'henru@brightedge.co.za' },
    { name = 'Dirk du Toit', email = 'dirk@brightedge.co.za' },
]
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = ">=3.10"

[project.scripts]
venvit = "venvit.__main__:main"

[project.urls]
# documentation = "https://readthedocs.org"
Issues = "https://github.com/BrightEdgeeServices/venvit/issues"
Changelog = 'https://github.com/BrightEdgeeServices/venvit/blob/enhancement/master/ReleaseNotes.md'
homepage = 'https://github.com/BrightEdgeeServices/venvit'
repository = "https://github.com/BrightEdgeeServices/venvit.git"

[tool.black]
line-length = 120
target-version = [
    "py313",
]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'
ignore-words-list = 'AfterAll'

[tool.coverage.run]
source = [
    'src',
    'tests',
]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
codecov = ">=2.1.13"
flake8 = ">=7.1.1"
mdformat-gfm = ">=0.4.1"
mdformat-frontmatter = ">=2.0.8"
mdformat-footnote = ">=0.1.1"
pre-commit = ">=4.0.1"
pytest = ">=8.3.4"
pytest-cov = ">=6.0.0"
rstcheck = { extras = [
    "sphinx",
], version = ">=6.2.4" }
sphinx = ">=8.1.3"
twine = ">=6.1.0"
pygments = "^2.19.1"


[[tool.poetry.source]]
name = "RTE"
url = "https://github.com/BrightEdgeeServices/PoetryPrivate.git"
priority = "explicit"

[tool.pytest.ini_options]
addopts = [
    #    '-vv',
    '--ignore-glob=*\\Archive',
]
filterwarnings = [
    #    "ignore::DeprecationWarning",
]
pythonpath = [
    'src',
    'tests',
]
testpaths = 'tests'
markers = [
    "select: Run a selection of tests",
    "upgrade: Run upgrade",
    "main: Test __main__",
]
